--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,21 +1,20 @@
 name: Continuous integration
-
+permissions: write-all
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
-
-  # Build, test and analyze
+  #Build, test and analyze
   build-test-analyze:
     name: Build, test and analyze
     if: "!contains(github.event.head_commit.message, '[skip test]')"
-    uses: lowlighter/metrics/.github/workflows/test.yml@master
+    uses: siosios/metrics/.github/workflows/test.yml@main
 
   # Format code
   format:
     name: Format code
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: [ build-test-analyze ]
     if: always() && (needs.build-test-analyze.result == 'success' || needs.build-test-analyze.result == 'skipped')
     steps:
@@ -23,8 +22,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Checkout master
-        run: git checkout master
+      - name: Checkout main
+        run: git checkout main
       - name: Format code
         run: |
           npm install -g dprint
@@ -43,8 +42,10 @@ jobs:
   # Update plugins and template indexes, along with README.md
   update-indexes:
     name: Publish rebuilt metrics indexes
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: [ format ]
+    permissions:
+      contents: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -56,17 +57,19 @@ jobs:
           node-version: 20
       - name: Pull changes
         run: |
-          git checkout master
+          git checkout main
           git pull
       - name: Setup metrics
-        run: npm ci
+        run: npm install
+      - name: npm audit
+        run: npm audit fix --force
       - name: Publish rebuild metrics indexes
-        run: npm run build -- publish
+        run: npm run build --publish
 
   # Build docker image from master and publish it to GitHub registry
   docker-master:
-    name: Publish master to GitHub registry
-    runs-on: ubuntu-latest
+    name: Publish main to GitHub registry
+    runs-on: self-hosted
     needs: [ update-indexes ]
     steps:
       - name: Checkout repository
@@ -74,9 +77,9 @@ jobs:
       - name: Login to GitHub registry
         run: echo ${{ github.token }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - name: Build docker image
-        run: docker build -t ghcr.io/lowlighter/metrics:master .
+        run: docker build -t ghcr.io/siosios/metrics:main .
       - name: Publish to GitHub registry
-        run: docker push ghcr.io/lowlighter/metrics:master
+        run: docker push ghcr.io/siosios/metrics:main
       - name: Tag docker image (beta) and publish to GitHub registry
         run: |
           set +e
@@ -85,35 +88,35 @@ jobs:
           set -e
           if [[ ! -z "$METRICS_VERSION" ]]; then
             echo "Beta version: v$METRICS_VERSION_BETA"
-            docker tag ghcr.io/lowlighter/metrics:master ghcr.io/lowlighter/metrics:$(echo "v$METRICS_VERSION_BETA")
-            docker push ghcr.io/lowlighter/metrics:$(echo "v$METRICS_VERSION_BETA")
+            docker tag ghcr.io/siosios/metrics:main ghcr.io/siosios/metrics:$(echo "v$METRICS_VERSION_BETA")
+            docker push ghcr.io/siosios/metrics:$(echo "v$METRICS_VERSION_BETA")
           fi
       - name: Tag docker image (main) and publish to GitHub registry
         run: |
-          docker tag ghcr.io/lowlighter/metrics:master ghcr.io/lowlighter/metrics:main
-          docker push ghcr.io/lowlighter/metrics:main
+          docker tag ghcr.io/siosios/metrics:main ghcr.io/siosios/metrics:main
+          docker push ghcr.io/siosios/metrics:main
 
   # Deploy to beta-metrics.lecoq.io
-  deploy-master:
-    name: Deploy lowlighter/metrics@master
-    runs-on: ubuntu-latest
-    needs: [ docker-master ]
-    steps:
-      - name: Deploy web instance
-        run: "curl -X POST -H 'Authorization: ${{ secrets.WEB_DEPLOY_BETA_TOKEN }}' https://beta-metrics.lecoq.io/.control/stop"
-      - name: Wait for redeploy
-        run: sleep 120
-      - name: Check deployment status
-        run: "curl --retry 15 --retry-delay 60 https://beta-metrics.lecoq.io/.version"
+  #deploy-master:
+  #  name: Deploy siosios/metrics@main
+  #  runs-on: ubuntu-latest
+  #  needs: [ docker-master ]
+  #  steps:
+  #    - name: Deploy web instance
+  #      run: "curl -X POST -H 'Authorization: ${{ secrets.WEB_DEPLOY_BETA_TOKEN }}' https://beta-metrics.lecoq.io/.control/stop"
+   #   - name: Wait for redeploy
+   #     run: sleep 120
+   #   - name: Check deployment status
+   #     run: "curl --retry 15 --retry-delay 60 https://beta-metrics.lecoq.io/.version"
 
-  # Test lowlighter/metrics@master
+  # Test siosios/metrics@master
   action-master-test:
-    name: Test lowlighter/metrics@master
-    runs-on: ubuntu-latest
+    name: Test siosios/metrics@main
+    runs-on: self-hosted
     needs: [ docker-master ]
     steps:
       - name: Run tests
-        uses: mikey-/metrics@main
+        uses: siosios/metrics@main
         with:
           token: MOCKED_TOKEN
           plugins_errors_fatal: yes
@@ -125,7 +128,7 @@ jobs:
   publish-examples:
     name: Publish examples
     needs: [ action-master-test ]
-    uses: lowlighter/metrics/.github/workflows/examples.yml@master
+    uses: siosios/metrics/.github/workflows/examples.yml@main
     secrets:
       METRICS_TOKEN: ${{ secrets.METRICS_TOKEN }}
       METRICS_TOKEN_WITH_SCOPES: ${{ secrets.METRICS_TOKEN_WITH_SCOPES }}
@@ -135,7 +138,6 @@ jobs:
       GOOGLE_MAP_TOKEN: ${{ secrets.GOOGLE_MAP_TOKEN }}
       SPLATOON_TOKEN: ${{ secrets.SPLATOON_TOKEN }}
       SPLATOON_STATINK_TOKEN: ${{ secrets.SPLATOON_STATINK_TOKEN }}
-      SIXTEEN_PERSONALITIES_URL: ${{ secrets.SIXTEEN_PERSONALITIES_URL }}
       SPOTIFY_TOKENS: ${{ secrets.SPOTIFY_TOKENS }}
       STOCK_TOKEN: ${{ secrets.STOCK_TOKEN }}
       TWITTER_TOKEN: ${{ secrets.TWITTER_TOKEN }}
@@ -145,12 +147,12 @@ jobs:
   publish-examples-presets:
     name: Publish examples (presets)
     needs: [ action-master-test ]
-    uses: lowlighter/metrics/.github/workflows/examples.presets.yml@master
+    uses: siosios/metrics/.github/workflows/examples.presets.yml@main
 
   # Build docker image from master and publish it to GitHub registry with release tag
   docker-release:
     name: Publish release to GitHub registry
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: [ publish-examples ]
     if: contains(github.event.head_commit.message, '[release]')
     steps:
@@ -158,25 +160,25 @@ jobs:
         uses: actions/checkout@v4
       - name: Login to GitHub registry
         run: echo ${{ github.token }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-      - name: Pull docker image (master)
-        run: docker pull ghcr.io/lowlighter/metrics:master
+      - name: Pull docker image (main)
+        run: docker pull ghcr.io/siosios/metrics:main
       - name: Tag docker image (release)
         env:
           GITHUB_COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
-        run: docker tag ghcr.io/lowlighter/metrics:master ghcr.io/lowlighter/metrics:$(echo $GITHUB_COMMIT_MESSAGE | grep -Po 'v\d+[.]\d+')
+        run: docker tag ghcr.io/siosios/metrics:main ghcr.io/siosios/metrics:$(echo $GITHUB_COMMIT_MESSAGE | grep -Po 'v\d+[.]\d+')
       - name: Publish release to GitHub registry
         env:
           GITHUB_COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
-        run: docker push ghcr.io/lowlighter/metrics:$(echo $GITHUB_COMMIT_MESSAGE | grep -Po 'v\d+[.]\d+')
+        run: docker push ghcr.io/siosios/metrics:$(echo $GITHUB_COMMIT_MESSAGE | grep -Po 'v\d+[.]\d+')
       - name: Tag docker image (latest)
-        run: docker tag ghcr.io/lowlighter/metrics:master ghcr.io/lowlighter/metrics:latest
+        run: docker tag ghcr.io/siosios/metrics:main ghcr.io/siosios/metrics:latest
       - name: Publish latest to GitHub registry
-        run: docker push ghcr.io/lowlighter/metrics:latest
+        run: docker push ghcr.io/siosios/metrics:latest
 
   # Rebase latest branch on master
   update-latest:
-    name: Rebase latest on master
-    runs-on: ubuntu-latest
+    name: Rebase latest on main
+    runs-on: self-hosted
     needs: [ docker-release ]
     steps:
       - name: Checkout repository
@@ -188,24 +190,24 @@ jobs:
         with:
           node-version: 20
       - name: Setup metrics
-        run: npm ci
+        run: npm install
       - name: Pull
         run: git pull
       - name: Checkout latest
         run: git checkout latest
-      - name: Rebase latest on master
-        run: git merge master
+      - name: Rebase latest on main
+        run: git merge main
       - name: Push latest
         run: git push origin latest
 
-  # Test lowlighter/metrics@latest
+  # Test siosios/metrics@latest
   action-latest-test:
-    name: Test lowlighter/metrics@latest
-    runs-on: ubuntu-latest
+    name: Test siosios/metrics@latest
+    runs-on: self-hosted
     needs: [ update-latest ]
     steps:
       - name: Run tests
-        uses: mikey-/metrics@latest
+        uses: siosios/metrics@latest
         with:
           token: MOCKED_TOKEN
           plugins_errors_fatal: yes
@@ -214,23 +216,23 @@ jobs:
           verify: yes
 
   # Deploy to metrics.lecoq.io
-  deploy-latest:
-    name: Deploy lowlighter/metrics@latest
-    runs-on: ubuntu-latest
-    needs: [ docker-release, deploy-master ]
-    steps:
-      - name: Deploy web instance
-        run: "curl -X POST -H 'Authorization: ${{ secrets.WEB_DEPLOY_TOKEN }}' https://metrics.lecoq.io/.control/stop"
-      - name: Wait for redeploy
-        run: sleep 120
-      - name: Check deployment status
-        run: "curl --retry 15 --retry-delay 60 https://metrics.lecoq.io/.version"
+ # deploy-latest:
+  #  name: Deploy siosios/metrics@latest
+  #  runs-on: ubuntu-latest
+ #   needs: [ docker-release, deploy-master ]
+ #   steps:
+ #     - name: Deploy web instance
+ #       run: "curl -X POST -H 'Authorization: ${{ secrets.WEB_DEPLOY_TOKEN }}' https://metrics.lecoq.io/.control/stop"
+  #    - name: Wait for redeploy
+ #       run: sleep 120
+ #     - name: Check deployment status
+ #       run: "curl --retry 15 --retry-delay 60 https://metrics.lecoq.io/.version"
 
   # Publish GitHub release
   publish-release:
     name: Publish release
-    runs-on: ubuntu-latest
-    needs: [ action-latest-test, deploy-latest ]
+    runs-on: self-hosted
+    needs: [ action-latest-test ]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -239,7 +241,7 @@ jobs:
         with:
           node-version: 20
       - name: Setup metrics
-        run: npm ci
+        run: npm install
       - name: Publish release
         run: node .github/scripts/release.mjs
         env:
