--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,20 +1,16 @@
 name: Continuous integration
-permissions: write-all
+
 on:
-  # Schedule daily updates
-  schedule: [{cron: "0 0 * * *"}]
-  # (optional) Run workflow manually
-  workflow_dispatch:
-  # (optional) Run workflow when pushing on master/main
-  push: {branches: ["master", "main"]}
-  
+  push:
+    branches: [ master ]
+
 jobs:
-  #Build, test and analyze
+
+  # Build, test and analyze
   build-test-analyze:
     name: Build, test and analyze
     if: "!contains(github.event.head_commit.message, '[skip test]')"
-    uses: siosios/Metrics/.github/workflows/test.yml@master
-
+    uses: siosios/metrics/.github/workflows/test.yml@master
 
   # Format code
   format:
@@ -22,7 +18,6 @@ jobs:
     runs-on: self-hosted
     needs: [ build-test-analyze ]
     if: always() && (needs.build-test-analyze.result == 'success' || needs.build-test-analyze.result == 'skipped')
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -47,11 +42,9 @@ jobs:
 
   # Update plugins and template indexes, along with README.md
   update-indexes:
-    name: Publish rebuilt Metrics indexes
+    name: Publish rebuilt metrics indexes
     runs-on: self-hosted
     needs: [ format ]
-    permissions:
-      contents: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -65,12 +58,10 @@ jobs:
         run: |
           git checkout master
           git pull
-      - name: Setup Metrics
+      - name: Setup metrics
         run: npm install
-      - name: npm audit
-        run: npm audit fix --force
-      - name: Publish rebuild Metrics indexes
-        run: npm run build --publish
+      - name: Publish rebuild metrics indexes
+        run: npm run build -- publish
 
   # Build docker image from master and publish it to GitHub registry
   docker-master:
@@ -83,47 +74,46 @@ jobs:
       - name: Login to GitHub registry
         run: echo ${{ github.token }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - name: Build docker image
-        run: docker build -t ghcr.io/siosios/Metrics:master .
+        run: docker build -t ghcr.io/siosios/metrics:master .
       - name: Publish to GitHub registry
-        run: docker push ghcr.io/siosios/Metrics:master
+        run: docker push ghcr.io/siosios/metrics:master
       - name: Tag docker image (beta) and publish to GitHub registry
         run: |
           set +e
-          Metrics_VERSION=$(cat package.json | grep -Po '(?<="version": ")\d+[.]\d+(?=[.]0-beta")')
-          Metrics_VERSION_BETA="$Metrics_VERSION-beta"
+          METRICS_VERSION=$(cat package.json | grep -Po '(?<="version": ")\d+[.]\d+(?=[.]0-beta")')
+          METRICS_VERSION_BETA="$METRICS_VERSION-beta"
           set -e
-          if [[ ! -z "$Metrics_VERSION" ]]; then
-            echo "Beta version: v$Metrics_VERSION_BETA"
-            docker tag ghcr.io/siosios/Metrics:master ghcr.io/siosios/Metrics:$(echo "v$Metrics_VERSION_BETA")
-            docker push ghcr.io/siosios/Metrics:$(echo "v$Metrics_VERSION_BETA")
+          if [[ ! -z "$METRICS_VERSION" ]]; then
+            echo "Beta version: v$METRICS_VERSION_BETA"
+            docker tag ghcr.io/siosios/metrics:master ghcr.io/siosios/metrics:$(echo "v$METRICS_VERSION_BETA")
+            docker push ghcr.io/siosios/metrics:$(echo "v$METRICS_VERSION_BETA")
           fi
-      - name: Tag docker image (master) and publish to GitHub registry
+      - name: Tag docker image (main) and publish to GitHub registry
         run: |
-          docker tag ghcr.io/siosios/Metrics:master ghcr.io/siosios/Metrics:master
-          docker push ghcr.io/siosios/Metrics:master
+          docker tag ghcr.io/siosios/metrics:master ghcr.io/siosios/metrics:main
+          docker push ghcr.io/siosios/metrics:main
 
-  # Deploy to beta-Metrics.lecoq.io
-  #deploy-master:
-  #  name: Deploy siosios/Metrics@master
-  #  runs-on: ubuntu-latest
-  #  needs: [ docker-master ]
-  #  steps:
-  #    - name: Deploy web instance
-  #      run: "curl -X POST -H 'Authorization: ${{ secrets.WEB_DEPLOY_BETA_TOKEN }}' https://beta-Metrics.lecoq.io/.control/stop"
-   #   - name: Wait for redeploy
-   #     run: sleep 120
-   #   - name: Check deployment status
-   #     run: "curl --retry 15 --retry-delay 60 https://beta-Metrics.lecoq.io/.version"
+  # Deploy to beta-metrics.lecoq.io
+  deploy-master:
+    name: Deploy siosios/metrics@master
+    runs-on: self-hosted
+    needs: [ docker-master ]
+    steps:
+      - name: Deploy web instance
+        run: "curl -X POST -H 'Authorization: ${{ secrets.WEB_DEPLOY_BETA_TOKEN }}' https://beta-metrics.lecoq.io/.control/stop"
+      - name: Wait for redeploy
+        run: sleep 120
+      - name: Check deployment status
+        run: "curl --retry 15 --retry-delay 60 https://beta-metrics.lecoq.io/.version"
 
-  # Test siosios/Metrics@master
-  # Test lowlighter/metrics@master
+  # Test siosios/metrics@master
   action-master-test:
     name: Test siosios/metrics@master
     runs-on: self-hosted
     needs: [ docker-master ]
     steps:
       - name: Run tests
-        uses: siosios/metrics@main
+        uses: mikey-/metrics@main
         with:
           token: MOCKED_TOKEN
           plugins_errors_fatal: yes
@@ -135,16 +125,17 @@ jobs:
   publish-examples:
     name: Publish examples
     needs: [ action-master-test ]
-    uses: siosios/Metrics/.github/workflows/examples.yml@master
+    uses: siosios/metrics/.github/workflows/examples.yml@master
     secrets:
-      Metrics_TOKEN: ${{ secrets.Metrics_TOKEN }}
-      Metrics_TOKEN_WITH_SCOPES: ${{ secrets.Metrics_TOKEN_WITH_SCOPES }}
-      Metrics_TOKEN_PERSONAL: ${{ secrets.Metrics_TOKEN_PERSONAL }}
+      METRICS_TOKEN: ${{ secrets.METRICS_TOKEN }}
+      METRICS_TOKEN_WITH_SCOPES: ${{ secrets.METRICS_TOKEN_WITH_SCOPES }}
+      METRICS_TOKEN_PERSONAL: ${{ secrets.METRICS_TOKEN_PERSONAL }}
       CHESS_TOKEN: ${{ secrets.CHESS_TOKEN }}
       PAGESPEED_TOKEN: ${{ secrets.PAGESPEED_TOKEN }}
       GOOGLE_MAP_TOKEN: ${{ secrets.GOOGLE_MAP_TOKEN }}
       SPLATOON_TOKEN: ${{ secrets.SPLATOON_TOKEN }}
       SPLATOON_STATINK_TOKEN: ${{ secrets.SPLATOON_STATINK_TOKEN }}
+      SIXTEEN_PERSONALITIES_URL: ${{ secrets.SIXTEEN_PERSONALITIES_URL }}
       SPOTIFY_TOKENS: ${{ secrets.SPOTIFY_TOKENS }}
       STOCK_TOKEN: ${{ secrets.STOCK_TOKEN }}
       TWITTER_TOKEN: ${{ secrets.TWITTER_TOKEN }}
@@ -154,7 +145,7 @@ jobs:
   publish-examples-presets:
     name: Publish examples (presets)
     needs: [ action-master-test ]
-    uses: siosios/Metrics/.github/workflows/examples.presets.yml@master
+    uses: siosios/metrics/.github/workflows/examples.presets.yml@master
 
   # Build docker image from master and publish it to GitHub registry with release tag
   docker-release:
@@ -168,19 +159,19 @@ jobs:
       - name: Login to GitHub registry
         run: echo ${{ github.token }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - name: Pull docker image (master)
-        run: docker pull ghcr.io/siosios/Metrics:master
+        run: docker pull ghcr.io/siosios/metrics:master
       - name: Tag docker image (release)
         env:
           GITHUB_COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
-        run: docker tag ghcr.io/siosios/Metrics:master ghcr.io/siosios/Metrics:$(echo $GITHUB_COMMIT_MESSAGE | grep -Po 'v\d+[.]\d+')
+        run: docker tag ghcr.io/siosios/metrics:master ghcr.io/siosios/metrics:$(echo $GITHUB_COMMIT_MESSAGE | grep -Po 'v\d+[.]\d+')
       - name: Publish release to GitHub registry
         env:
           GITHUB_COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
-        run: docker push ghcr.io/siosios/Metrics:$(echo $GITHUB_COMMIT_MESSAGE | grep -Po 'v\d+[.]\d+')
+        run: docker push ghcr.io/siosios/metrics:$(echo $GITHUB_COMMIT_MESSAGE | grep -Po 'v\d+[.]\d+')
       - name: Tag docker image (latest)
-        run: docker tag ghcr.io/siosios/Metrics:master ghcr.io/siosios/Metrics:latest
+        run: docker tag ghcr.io/siosios/metrics:master ghcr.io/siosios/metrics:latest
       - name: Publish latest to GitHub registry
-        run: docker push ghcr.io/siosios/Metrics:latest
+        run: docker push ghcr.io/siosios/metrics:latest
 
   # Rebase latest branch on master
   update-latest:
@@ -196,7 +187,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-      - name: Setup Metrics
+      - name: Setup metrics
         run: npm install
       - name: Pull
         run: git pull
@@ -207,14 +198,14 @@ jobs:
       - name: Push latest
         run: git push origin latest
 
-  # Test siosios/Metrics@latest
+  # Test siosios/metrics@latest
   action-latest-test:
-    name: Test siosios/Metrics@latest
+    name: Test siosios/metrics@latest
     runs-on: self-hosted
     needs: [ update-latest ]
     steps:
       - name: Run tests
-        uses: siosios/Metrics@latest
+        uses: mikey-/metrics@latest
         with:
           token: MOCKED_TOKEN
           plugins_errors_fatal: yes
@@ -222,24 +213,24 @@ jobs:
           use_mocked_data: yes
           verify: yes
 
-  # Deploy to Metrics.lecoq.io
- # deploy-latest:
-  #  name: Deploy siosios/Metrics@latest
-  #  runs-on: ubuntu-latest
- #   needs: [ docker-release, deploy-master ]
- #   steps:
- #     - name: Deploy web instance
- #       run: "curl -X POST -H 'Authorization: ${{ secrets.WEB_DEPLOY_TOKEN }}' https://Metrics.lecoq.io/.control/stop"
-  #    - name: Wait for redeploy
- #       run: sleep 120
- #     - name: Check deployment status
- #       run: "curl --retry 15 --retry-delay 60 https://Metrics.lecoq.io/.version"
+  # Deploy to metrics.lecoq.io
+  deploy-latest:
+    name: Deploy siosios/metrics@latest
+    runs-on: self-hosted
+    needs: [ docker-release, deploy-master ]
+    steps:
+      - name: Deploy web instance
+        run: "curl -X POST -H 'Authorization: ${{ secrets.WEB_DEPLOY_TOKEN }}' https://metrics.lecoq.io/.control/stop"
+      - name: Wait for redeploy
+        run: sleep 120
+      - name: Check deployment status
+        run: "curl --retry 15 --retry-delay 60 https://metrics.lecoq.io/.version"
 
   # Publish GitHub release
   publish-release:
     name: Publish release
     runs-on: self-hosted
-    needs: [ action-latest-test ]
+    needs: [ action-latest-test, deploy-latest ]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -247,7 +238,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-      - name: Setup Metrics
+      - name: Setup metrics
         run: npm install
       - name: Publish release
         run: node .github/scripts/release.mjs
