--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,30 +1,31 @@
 name: Continuous integration
 
 on:
+  schedule:
+    - cron: "0 0 * * *"
+  workflow_dispatch:
   push:
-    branches: [ master ]
+    branches:
+      - master
+      - main
 
 jobs:
-
-  # Build, test and analyze
   build-test-analyze:
     name: Build, test and analyze
     if: "!contains(github.event.head_commit.message, '[skip test]')"
     uses: siosios/metrics/.github/workflows/test.yml@master
 
-  # Format code
   format:
     name: Format code
     runs-on: self-hosted
-    needs: [ build-test-analyze ]
+    needs: build-test-analyze
     if: always() && (needs.build-test-analyze.result == 'success' || needs.build-test-analyze.result == 'skipped')
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Checkout master
-        run: git checkout master
+          ref: ${{ github.event.pull_request.head.sha || github.sha }}
       - name: Format code
         run: |
           npm install -g dprint
@@ -32,19 +33,16 @@ jobs:
           npx dprint fmt --config .github/config/dprint.json
       - name: Publish formatted code
         run: |
-          set +e
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
           git add --all
-          git commit -m "chore: code formatting"
-          git push
-          set -e
+          git commit -m "chore: code formatting" || echo "No changes to commit"
+          git push origin ${GITHUB_REF##*/}
 
-  # Update plugins and template indexes, along with README.md
   update-indexes:
     name: Publish rebuilt metrics indexes
     runs-on: self-hosted
-    needs: [ format ]
+    needs: format
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -54,50 +52,39 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-      - name: Pull changes
-        run: |
-          git checkout master
-          git pull
       - name: Setup metrics
         run: npm install
       - name: Publish rebuild metrics indexes
         run: npm run build -- publish
 
-  # Build docker image from master and publish it to GitHub registry
   docker-master:
     name: Publish master to GitHub registry
     runs-on: self-hosted
-    needs: [ update-indexes ]
+    needs: update-indexes
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Login to GitHub registry
         run: echo ${{ github.token }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-      - name: Build docker image
-        run: docker build -t ghcr.io/siosios/metrics:master .
-      - name: Publish to GitHub registry
-        run: docker push ghcr.io/siosios/metrics:master
-      - name: Tag docker image (beta) and publish to GitHub registry
+      - name: Build and publish docker image
         run: |
-          set +e
+          docker build -t ghcr.io/siosios/metrics:master .
+          docker push ghcr.io/siosios/metrics:master
+      - name: Tag and publish beta and main images
+        run: |
           METRICS_VERSION=$(cat package.json | grep -Po '(?<="version": ")\d+[.]\d+(?=[.]0-beta")')
           METRICS_VERSION_BETA="$METRICS_VERSION-beta"
-          set -e
           if [[ ! -z "$METRICS_VERSION" ]]; then
-            echo "Beta version: v$METRICS_VERSION_BETA"
-            docker tag ghcr.io/siosios/metrics:master ghcr.io/siosios/metrics:$(echo "v$METRICS_VERSION_BETA")
-            docker push ghcr.io/siosios/metrics:$(echo "v$METRICS_VERSION_BETA")
+            docker tag ghcr.io/siosios/metrics:master ghcr.io/siosios/metrics:$METRICS_VERSION_BETA
+            docker push ghcr.io/siosios/metrics:$METRICS_VERSION_BETA
           fi
-      - name: Tag docker image (main) and publish to GitHub registry
-        run: |
           docker tag ghcr.io/siosios/metrics:master ghcr.io/siosios/metrics:main
           docker push ghcr.io/siosios/metrics:main
 
-  # Deploy to beta-metrics.lecoq.io
   deploy-master:
     name: Deploy siosios/metrics@master
     runs-on: self-hosted
-    needs: [ docker-master ]
+    needs: docker-master
     steps:
       - name: Deploy web instance
         run: "curl -X POST -H 'Authorization: ${{ secrets.WEB_DEPLOY_BETA_TOKEN }}' https://beta-metrics.lecoq.io/.control/stop"
@@ -106,11 +93,10 @@ jobs:
       - name: Check deployment status
         run: "curl --retry 15 --retry-delay 60 https://beta-metrics.lecoq.io/.version"
 
-  # Test siosios/metrics@master
   action-master-test:
     name: Test siosios/metrics@master
     runs-on: self-hosted
-    needs: [ docker-master ]
+    needs: docker-master
     steps:
       - name: Run tests
         uses: mikey-/metrics@main
@@ -121,10 +107,9 @@ jobs:
           use_mocked_data: yes
           verify: yes
 
-  # Publish examples
   publish-examples:
     name: Publish examples
-    needs: [ action-master-test ]
+    needs: action-master-test
     uses: siosios/metrics/.github/workflows/examples.yml@master
     secrets:
       METRICS_TOKEN: ${{ secrets.METRICS_TOKEN }}
@@ -141,43 +126,37 @@ jobs:
       TWITTER_TOKEN: ${{ secrets.TWITTER_TOKEN }}
       WAKATIME_TOKEN: ${{ secrets.WAKATIME_TOKEN }}
 
-  # Publish examples (presets)
   publish-examples-presets:
     name: Publish examples (presets)
-    needs: [ action-master-test ]
+    needs: action-master-test
     uses: siosios/metrics/.github/workflows/examples.presets.yml@master
 
-  # Build docker image from master and publish it to GitHub registry with release tag
   docker-release:
     name: Publish release to GitHub registry
     runs-on: self-hosted
-    needs: [ publish-examples ]
+    needs: publish-examples
     if: contains(github.event.head_commit.message, '[release]')
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Login to GitHub registry
         run: echo ${{ github.token }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-      - name: Pull docker image (master)
-        run: docker pull ghcr.io/siosios/metrics:master
-      - name: Tag docker image (release)
-        env:
-          GITHUB_COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
-        run: docker tag ghcr.io/siosios/metrics:master ghcr.io/siosios/metrics:$(echo $GITHUB_COMMIT_MESSAGE | grep -Po 'v\d+[.]\d+')
-      - name: Publish release to GitHub registry
-        env:
-          GITHUB_COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
-        run: docker push ghcr.io/siosios/metrics:$(echo $GITHUB_COMMIT_MESSAGE | grep -Po 'v\d+[.]\d+')
-      - name: Tag docker image (latest)
-        run: docker tag ghcr.io/siosios/metrics:master ghcr.io/siosios/metrics:latest
-      - name: Publish latest to GitHub registry
-        run: docker push ghcr.io/siosios/metrics:latest
+      - name: Pull and tag docker image
+        run: |
+          docker pull ghcr.io/siosios/metrics:master
+          GITHUB_COMMIT_MESSAGE=${{ github.event.head_commit.message }}
+          docker tag ghcr.io/siosios/metrics:master ghcr.io/siosios/metrics:$(echo $GITHUB_COMMIT_MESSAGE | grep -Po 'v\d+[.]\d+')
+          docker tag ghcr.io/siosios/metrics:master ghcr.io/siosios/metrics:latest
+      - name: Publish release and latest to GitHub registry
+        run: |
+          GITHUB_COMMIT_MESSAGE=${{ github.event.head_commit.message }}
+          docker push ghcr.io/siosios/metrics:$(echo $GITHUB_COMMIT_MESSAGE | grep -Po 'v\d+[.]\d+')
+          docker push ghcr.io/siosios/metrics:latest
 
-  # Rebase latest branch on master
   update-latest:
     name: Rebase latest on master
     runs-on: self-hosted
-    needs: [ docker-release ]
+    needs: docker-release
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -187,22 +166,16 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-      - name: Setup metrics
-        run: npm install
-      - name: Pull
-        run: git pull
-      - name: Checkout latest
-        run: git checkout latest
       - name: Rebase latest on master
-        run: git merge master
-      - name: Push latest
-        run: git push origin latest
+        run: |
+          git checkout latest
+          git merge master
+          git push origin latest
 
-  # Test siosios/metrics@latest
   action-latest-test:
     name: Test siosios/metrics@latest
     runs-on: self-hosted
-    needs: [ update-latest ]
+    needs: update-latest
     steps:
       - name: Run tests
         uses: mikey-/metrics@latest
@@ -213,11 +186,12 @@ jobs:
           use_mocked_data: yes
           verify: yes
 
-  # Deploy to metrics.lecoq.io
   deploy-latest:
     name: Deploy siosios/metrics@latest
     runs-on: self-hosted
-    needs: [ docker-release, deploy-master ]
+    needs:
+      - docker-release
+      - deploy-master
     steps:
       - name: Deploy web instance
         run: "curl -X POST -H 'Authorization: ${{ secrets.WEB_DEPLOY_TOKEN }}' https://metrics.lecoq.io/.control/stop"
@@ -226,11 +200,12 @@ jobs:
       - name: Check deployment status
         run: "curl --retry 15 --retry-delay 60 https://metrics.lecoq.io/.version"
 
-  # Publish GitHub release
   publish-release:
     name: Publish release
     runs-on: self-hosted
-    needs: [ action-latest-test, deploy-latest ]
+    needs:
+      - action-latest-test
+      - deploy-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -238,11 +213,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-      - name: Setup metrics
-        run: npm install
       - name: Publish release
         run: node .github/scripts/release.mjs
         env:
           GITHUB_TOKEN: ${{ github.token }}
           GITHUB_REPOSITORY: ${{ github.repository }}
           GITHUB_COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
+
